objects/AIA_Implementation__c.object
<CustomObject>
    <fields>
        <fullName>AIADoc_approval_status__c</fullName>
        <defaultValue>"Not started"</defaultValue>
        <description>This field will contains the value when AIADoc is approved</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AIADoc approval status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_BD_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to Capture BD is required or not for the implementation - US5425</description>
        <label>AIA BD Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Enrollment_Option__c</fullName>
        <description>Formula field to get the Enrollment option from BRF as per US889</description>
        <formula>Text(Benefit_Request_Form__r.Enrollment_Option__c)</formula>
        <label>Enrollment Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Enrollment_Type__c</fullName>
        <description>Field to display Enrollment type from BRF as per US889</description>
        <formula>Text(Benefit_Request_Form__r.Enrollment_Type__c)</formula>
        <label>Enrollment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Enrollment_Vendor__c</fullName>
        <description>Field to display Enrollement vendor from BRF as per US889</description>
        <formula>Benefit_Request_Form__r.Enrollment_Vendor__c</formula>
        <label>Enrollment Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_GS_Doc_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture Group structure document upload is required or not-US5425</description>
        <label>AIA GS Doc Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To populate the group structure request form under implementation</description>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIA_Open_Enrollment_End_Date__c</fullName>
        <description>A date field to capture end date of open enrollment created per US889</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Open_Enrollment_Meeting_End_Date__c</fullName>
        <description>Date field to capture end date of open enrollment meeting created per US889</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment Meeting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Open_Enrollment_Meeting_Start_Date__c</fullName>
        <description>Date field to capture start date of open enrollment meeting created per US889</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Open_Enrollment_Start_Date__c</fullName>
        <description>Date field to capture start date of open enrollment created per US889</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AIA_Other_Enrollment_Option__c</fullName>
        <description>Field to display the Other Enrollment option from BRF as per US889</description>
        <formula>Benefit_Request_Form__r.Other_Enrollment_Option__c</formula>
        <label>Other Enrollment Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the owner of the Implementation is selected from Area Mapping, this field will be checked-US465</description>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acc_Microsoft_URL_populated__c</fullName>
        <formula>IF(NOT( ISBLANK(( Account__r.Microsite_URL__c )) ),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Microsoft URL populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Account__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_city_state_zip__c</fullName>
        <formula>Account__r.BillingCity + ' ' +  Account__r.BillingState + ' ' +  Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account city state zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_street_Address__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_tasks_are_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be made true when all the tasks under implementation are marked as completed or not required</description>
        <label>All tasks are completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated_Enrollment_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Automated Enrollment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BD approved</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BICC_Request_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BICC Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BICC_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BICC Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRFId__c</fullName>
        <formula>Benefit_Request_Form__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRFId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Account_Legal_Name__c</fullName>
        <formula>Benefit_Request_Form__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Benefit_Effective_Date__c</fullName>
        <formula>Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Benefit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRF_Blue_Rewards__c</fullName>
        <formula>Benefit_Request_Form__r.PP_Blue_Rewards__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Blue Rewards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_CDH_Type__c</fullName>
        <formula>Benefit_Request_Form__r.PP_CDH_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF CDH Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_CDH__c</fullName>
        <formula>Benefit_Request_Form__r.PP_CDH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF CDH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_Control_plan_680__c</fullName>
        <formula>if( AND(text(Benefit_Request_Form__r.Opportunity__r.Market_Segment_New__c)='1000+',OR(TEXT( Benefit_Request_Form__r.Control_Plan__c)='690',TEXT( Benefit_Request_Form__r.Control_Plan__c)='')),true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Control plan 680</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_Control_plan__c</fullName>
        <formula>if( AND(text(Benefit_Request_Form__r.Opportunity__r.Market_Segment_New__c)='1000+',OR(TEXT( Benefit_Request_Form__r.Control_Plan__c)='580',TEXT( Benefit_Request_Form__r.Control_Plan__c)='')),true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Control plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_Custom_Wellness__c</fullName>
        <formula>Benefit_Request_Form__r.PP_Custom_Wellness__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Custom Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_FA__c</fullName>
        <formula>if(OR(text(Benefit_Request_Form__r.Funding_Arrangements__c)='Both',text(Benefit_Request_Form__r.Funding_Arrangements__c)='Other'),true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF FA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_FSA_BlueFund__c</fullName>
        <formula>Benefit_Request_Form__r.PP_FSA_BlueFund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF FSA BlueFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_FlexLink__c</fullName>
        <formula>Text(Benefit_Request_Form__r.FlexLink_Picklist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF FlexLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Funding_Arrangement__c</fullName>
        <formula>text( Benefit_Request_Form__r.Funding_Arrangements__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Funding Arrangement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Integrated_DM_Wellness__c</fullName>
        <formula>Benefit_Request_Form__r.PP_Integrated_DM_Wellness__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Integrated DM/Wellness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_New_Dental_Products__c</fullName>
        <formula>Benefit_Request_Form__r.Count_of_New_Dental_products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF New Dental Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRF_New_Products__c</fullName>
        <formula>Benefit_Request_Form__r.Count_of_New_products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF New Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRF_New_Rx_Products__c</fullName>
        <formula>Benefit_Request_Form__r.Count_of_New_Rx_products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF New Rx Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRF_New_Vision_Products__c</fullName>
        <formula>Benefit_Request_Form__r.Count_of_New_Vision_Products__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF New Vision Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRF_Religious_Accomodation__c</fullName>
        <formula>IF(ISBLANK(TEXT(Benefit_Request_Form__r.Accommodation__c )),False,True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Religious Accomodation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_Request_Type__c</fullName>
        <formula>Text(Benefit_Request_Form__r.Request_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Rx_Integration__c</fullName>
        <formula>Benefit_Request_Form__r.PP_Rx_Integration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Rx Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_Sales_Segment_Size__c</fullName>
        <formula>Text(Benefit_Request_Form__r.Sales_Segment_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Sales Segment Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Status__c</fullName>
        <formula>Text( Benefit_Request_Form__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backend_BRF_Effective_Date__c</fullName>
        <formula>Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backend BRF Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backend_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backend Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BenefitDesign_Status__c</fullName>
        <defaultValue>"Inprocess"</defaultValue>
        <description>This value is populated whenever the BD status changes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BenefitDesign Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when Benefit Design Document is Uploaded</description>
        <label>Benefit Design Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Revision_Date__c</fullName>
        <description>Most Recent Revision Date of associated benefit design record.
Not shown to the user on layout.
This is updated whenever the associated Benefit Design record is approved.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Most Recent Revision Date of associated benefit design record. Not shown to the user on layout.This is updated whenever the associated Benefit Design record is approved.</inlineHelpText>
        <label>Benefit Design Revision Date - Technical</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Revision_Number_Technical__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Technical field used to capture associated Most Recent Benefit Design records' version number. Not shown to the user on layout.</description>
        <inlineHelpText>Technical field used to capture associated Most Recent Benefit Design records' version number. Not shown to the user on layout.This is updated whenever the associated Benefit Design record is approved.</inlineHelpText>
        <label>Benefit Design Revision Number-Technical</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect/New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>Off-cycle - Administrative change</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle - Benefit change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claims_Settlem_Proc_SetupUpdated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claims Settlem Proc Setup/Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations3_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claims_Settlem_Proc_Setup_Updated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims Settlem Proc Setup/Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Implementation_Ended__c</fullName>
        <description>US463 Date Implementation ended</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Implementation Ended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementation_Started__c</fullName>
        <description>US463. This is set when Implementation is started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Implementation Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient_Email__c</fullName>
        <description>Email of external user to whom document will be sent for signature</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DocuSign Recipient Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Recipient_Name__c</fullName>
        <description>Name of external user to whom BAA document will be sent for signature</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DocuSign Recipient Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docusign_Document_send_user__c</fullName>
        <formula>IF(Benefit_Request_Form__r.Opportunity_Type__c == 'New', Benefit_Request_Form__r.Implementation_Manager_Account_Team__r.Email, Benefit_Request_Form__r.Account_Executive_Account_Team__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign Document send user</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Document_sending_user_Name__c</fullName>
        <description>This field will capture the username who is sending document for eSignature</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Docusign Document sending user Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Document_sending_user__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Docusign Document sending user</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Submitter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Docusign Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Processed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Errors_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Errors Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Insured_Acct_1st_Bill_Release_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fully-Insured Acct 1st Bill Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GSRF_approved__c</fullName>
        <defaultValue>"Not Approved"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>GSRF approved</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Status__c</fullName>
        <defaultValue>"Not Started"</defaultValue>
        <description>This field is populated with the GS status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GS Doc Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Workplan_Stages_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Workplan Stages Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Workplan_Stages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Workplan Stages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Imp_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imp Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Imp_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imp PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Imp_in_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imp in-progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Imp_not_started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imp not started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Countdown__c</fullName>
        <description>Days remaining until Implementation Effective Date. US463.</description>
        <formula>IF( Benefit_Request_Form__r.Benefit_Effective_Date__c &gt; TODAY(),ABS(Benefit_Request_Form__r.Benefit_Effective_Date__c - TODAY()),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days remaining until Implementation Effective Date</inlineHelpText>
        <label>Implementation Countdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Hyperlink_QuickAction__c</fullName>
        <description>Hyperlink to implementation record. This is to be used in update action which will be exposed as Implementation Summary section in related record layouts</description>
        <formula>HYPERLINK('/'+Id,Name)</formula>
        <label>Implementation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Plan_Timeline_Days__c</fullName>
        <label>Implementation Plan Timeline (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Maintenance_File_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Maintenance File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Enrollment_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manual Enrollment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Termination_Spreadsheet_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manual Termination Spreadsheet Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Microsite_CWR__c</fullName>
        <label>Microsite CWR #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Microsite_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Microsite Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Microsite_Request_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Microsite Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Microsite_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Microsite Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Blocked_Tasks__c</fullName>
        <description>US463</description>
        <label>Number of Blocked Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks_SLA_Broken__c</fullName>
        <description>US463</description>
        <label>Number of Tasks (SLA Broken)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Cycle_Billing_Change_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Off-Cycle Billing Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opp_Business_Type__c</fullName>
        <formula>text(Benefit_Request_Form__r.Opportunity__r.Business_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Business Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AIA_Post_Sales_Implementation</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpptyId__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpptyId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Error_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCP_Error_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Notes</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCP_Errors_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCP Errors Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCP_Errors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCP Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>story 3416 - aia</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementations (Sub Group Account)</relationshipLabel>
        <relationshipName>ImplementationAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Cards_Mailed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Cards Mailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Cards_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Cards Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Type__c</fullName>
        <label>Risk Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SearchLight_HealthCheck_Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SearchLight/HealthCheck Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SearchLight_HealthCheck_Verified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SearchLight/HealthCheck Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Acct_1st_Mthly_Settlem_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Self-Insured Acct 1st Mthly Settlem Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Acct_1st_Wkly_Invoice_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Self-Insured Acct 1st Wkly Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Settlements_status_of_AIADoc__c</fullName>
        <defaultValue>"Not Approved"</defaultValue>
        <description>This is populated from Approver - Settlements Analyst when approved as approved</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Settlements status of AIADoc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>